fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/Sales_by_Product__c.object-meta.xml
<CustomObject>
    <label>Sales by Product</label>
    <nameField>
        <displayFormat>SBP-{0000000}</displayFormat>
        <label>Sales by Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales by Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>