fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales by Product</relationshipLabel>
    <relationshipName>Sales_by_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>