fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Debug_Link__c.field-meta.xml
<CustomField>
    <fullName>Debug_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debug Link</label>
    <type>Text</type>
</CustomField>