fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <formula>IF(
OR(
Sales_Prior_Year__c = 0,
Sales_YTD__c = 0
),0,
(Sales_YTD__c - (Sales_Prior_Year__c  /  365 * (TODAY() - DATE(YEAR(TODAY()),1,1)))) / (Sales_Prior_Year__c / 365 * (TODAY() - DATE(YEAR(TODAY()),1,1)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>