fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <label>Material Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>