fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales by Product</relationshipLabel>
    <relationshipName>Sales_by_Product</relationshipName>
    <type>Lookup</type>
</CustomField>