fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub-Group</label>
    <length>12</length>
    <type>Text</type>
</CustomField>