fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Sales_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_Prior_Year__c</fullName>
    <label>Sales Prior Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>