fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Sales by Product</relationshipLabel>
    <relationshipName>Sales_by_Product</relationshipName>
    <type>Lookup</type>
</CustomField>