fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Text_Sales_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Text_Sales_Prior_Year__c</fullName>
    <label>Text - Sales Prior Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>