fullSandbox11072023/force-app/main/default/objects/Sales_by_Product__c/fields/Text_Sales_YTD_Debug__c.field-meta.xml
<CustomField>
    <fullName>Text_Sales_YTD_Debug__c</fullName>
    <label>Text - Sales YTD - Debug</label>
    <type>DateTime</type>
</CustomField>